@@ -1,6 +1,7 @@
-2011-07-15 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+2011-07-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* Not tagged.
-	* Set empty scalar assignment to "None" in Python converter. bug 84064 
+	* Set empty scalar assignment to "None" in Python converter. bug 84064
+	* Add "Clone sequence" option. (bug/feature 75955).
 
 2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-62
